[gd_scene load_steps=3 format=3 uid="uid://djvi11yd6tng5"]

[ext_resource type="Script" uid="uid://b2jlrx2oglkxl" path="res://player_display.gd" id="1_h5bc6"]
[ext_resource type="PackedScene" uid="uid://d4i03rbq60ft4" path="res://player/player.tscn" id="1_htkmk"]

[node name="PlayerDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_h5bc6")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Player" parent="SubViewportContainer/SubViewport" instance=ExtResource("1_htkmk")]
unique_name_in_owner = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -89.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ThrustLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Thrust: 0"

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="HealthLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Hull "

[node name="HealthBar" type="ProgressBar" parent="PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 100.0
show_percentage = false

[node name="FuelLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Fuel"

[node name="FuelBar" type="ProgressBar" parent="PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 100.0
show_percentage = false

[node name="ShieldLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Shields"

[node name="ShieldBar" type="ProgressBar" parent="PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 100.0
show_percentage = false

[connection signal="fuel_updated" from="SubViewportContainer/SubViewport/Player" to="." method="_on_player_fuel_updated"]
[connection signal="health_updated" from="SubViewportContainer/SubViewport/Player" to="." method="_on_player_health_updated"]
[connection signal="missile_launch_requested" from="SubViewportContainer/SubViewport/Player" to="." method="_on_player_missile_launch_requested"]
[connection signal="shield_strength_updated" from="SubViewportContainer/SubViewport/Player" to="." method="_on_player_shield_strength_updated"]
[connection signal="thrust_updated" from="SubViewportContainer/SubViewport/Player" to="." method="_on_player_thrust_updated"]
